// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TextField /> should focus the input 1`] = `
<TextField
  className=""
  errorText=""
  hintText=""
  label=""
  multiLine={false}
  name="test-input"
  onChange={[Function]}
  onFocusChange={[MockFunction]}
  onSanitize={[Function]}
  onValidate={[Function]}
  password={false}
  setRef={[Function]}
  type="text"
  value=""
>
  <div
    className="css-1vjh8yv "
  >
    <Hint
      hintText=""
      visible={false}
    >
      <div
        className="css-tnfb18 css-1jyyyen"
      >
        <Translate
          className=""
          params={Object {}}
          string=""
        >
          <span
            className=""
          />
        </Translate>
      </div>
    </Hint>
    <Label
      hasErrorMessage={false}
      isFloating={false}
      isFocused={false}
      label=""
      name="test-input"
    >
      <label
        className="css-u7lqu6 css-1fekhao"
        htmlFor="test-input"
      >
        <Translate
          className=""
          params={Object {}}
          string=""
        >
          <span
            className=""
          />
        </Translate>
      </label>
    </Label>
    <FormElement
      id="test-input"
      multiLine={false}
      name="test-input"
      onChange={[Function]}
      onFocusChange={[Function]}
      onSanitize={[Function]}
      onValidate={[Function]}
      password={false}
      setRef={[Function]}
      type="text"
      value=""
    >
      <Component
        className="css-keangt"
        id="test-input"
        multiLine={false}
        name="test-input"
        onChange={[Function]}
        onFocusChange={[Function]}
        onSanitize={[Function]}
        onValidate={[Function]}
        password={false}
        setRef={[Function]}
        type="text"
        validateOnBlur={true}
        value=""
      >
        <SimpleInput
          autoComplete={false}
          autoCorrect={false}
          className="css-keangt"
          disabled={false}
          id="test-input"
          multiLine={false}
          name="test-input"
          onChange={[Function]}
          onFocusChange={[Function]}
          onSanitize={[Function]}
          onValidate={[Function]}
          password={false}
          setRef={[Function]}
          type="text"
          validateOnBlur={true}
          value=""
        >
          <input
            autoComplete="off"
            autoCorrect="off"
            className="css-keangt"
            disabled={false}
            id="test-input"
            name="test-input"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            type="text"
            value=""
          />
        </SimpleInput>
      </Component>
    </FormElement>
    <Underline
      hasErrorMessage={false}
      isFocused={false}
    >
      <div
        className="css-ycal4l"
      >
        <div
          className="css-1tpmuef"
          style={
            Object {
              "borderBottomColor": undefined,
              "transform": "scale3d(0,1,1)",
            }
          }
        />
      </div>
    </Underline>
    <ErrorText
      className=""
      errorText=""
      validationError={null}
    >
      <div
        className=" css-hmgfge"
      >
        <Translate
          className=""
          params={Object {}}
          string=""
        >
          <span
            className=""
          />
        </Translate>
      </div>
    </ErrorText>
  </div>
</TextField>
`;

exports[`<TextField /> should receive the correct value while typing 1`] = `
<TextField
  className=""
  errorText=""
  hintText=""
  label=""
  multiLine={false}
  name="test-input"
  onChange={[Function]}
  onFocusChange={[Function]}
  onSanitize={[Function]}
  onValidate={[Function]}
  password={false}
  setRef={[Function]}
  type="text"
  value=""
>
  <div
    className="css-1vjh8yv "
  >
    <Hint
      hintText=""
      visible={false}
    >
      <div
        className="css-tnfb18 css-1jyyyen"
      >
        <Translate
          className=""
          params={Object {}}
          string=""
        >
          <span
            className=""
          />
        </Translate>
      </div>
    </Hint>
    <Label
      hasErrorMessage={false}
      isFloating={false}
      isFocused={false}
      label=""
      name="test-input"
    >
      <label
        className="css-u7lqu6 css-1fekhao"
        htmlFor="test-input"
      >
        <Translate
          className=""
          params={Object {}}
          string=""
        >
          <span
            className=""
          />
        </Translate>
      </label>
    </Label>
    <FormElement
      id="test-input"
      multiLine={false}
      name="test-input"
      onChange={[Function]}
      onFocusChange={[Function]}
      onSanitize={[Function]}
      onValidate={[Function]}
      password={false}
      setRef={[Function]}
      type="text"
      value=""
    >
      <Component
        className="css-keangt"
        id="test-input"
        multiLine={false}
        name="test-input"
        onChange={[Function]}
        onFocusChange={[Function]}
        onSanitize={[Function]}
        onValidate={[Function]}
        password={false}
        setRef={[Function]}
        type="text"
        validateOnBlur={true}
        value=""
      >
        <SimpleInput
          autoComplete={false}
          autoCorrect={false}
          className="css-keangt"
          disabled={false}
          id="test-input"
          multiLine={false}
          name="test-input"
          onChange={[Function]}
          onFocusChange={[Function]}
          onSanitize={[Function]}
          onValidate={[Function]}
          password={false}
          setRef={[Function]}
          type="text"
          validateOnBlur={true}
          value=""
        >
          <input
            autoComplete="off"
            autoCorrect="off"
            className="css-keangt"
            disabled={false}
            id="test-input"
            name="test-input"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            type="text"
            value="foobar"
          />
        </SimpleInput>
      </Component>
    </FormElement>
    <Underline
      hasErrorMessage={false}
      isFocused={false}
    >
      <div
        className="css-ycal4l"
      >
        <div
          className="css-1tpmuef"
          style={
            Object {
              "borderBottomColor": undefined,
              "transform": "scale3d(0,1,1)",
            }
          }
        />
      </div>
    </Underline>
    <ErrorText
      className=""
      errorText=""
      validationError={null}
    >
      <div
        className=" css-hmgfge"
      >
        <Translate
          className=""
          params={Object {}}
          string=""
        >
          <span
            className=""
          />
        </Translate>
      </div>
    </ErrorText>
  </div>
</TextField>
`;

exports[`<TextField /> should render a simple text field 1`] = `
<TextField
  className=""
  errorText=""
  hintText=""
  label=""
  multiLine={false}
  name="test-input"
  onChange={[Function]}
  onFocusChange={[Function]}
  onSanitize={[Function]}
  onValidate={[Function]}
  password={false}
  setRef={[Function]}
  type="text"
  value=""
>
  <div
    className="css-1vjh8yv "
  >
    <Hint
      hintText=""
      visible={false}
    >
      <div
        className="css-tnfb18 css-1jyyyen"
      >
        <Translate
          className=""
          params={Object {}}
          string=""
        >
          <span
            className=""
          />
        </Translate>
      </div>
    </Hint>
    <Label
      hasErrorMessage={false}
      isFloating={false}
      isFocused={false}
      label=""
      name="test-input"
    >
      <label
        className="css-u7lqu6 css-1fekhao"
        htmlFor="test-input"
      >
        <Translate
          className=""
          params={Object {}}
          string=""
        >
          <span
            className=""
          />
        </Translate>
      </label>
    </Label>
    <FormElement
      id="test-input"
      multiLine={false}
      name="test-input"
      onChange={[Function]}
      onFocusChange={[Function]}
      onSanitize={[Function]}
      onValidate={[Function]}
      password={false}
      setRef={[Function]}
      type="text"
      value=""
    >
      <Component
        className="css-keangt"
        id="test-input"
        multiLine={false}
        name="test-input"
        onChange={[Function]}
        onFocusChange={[Function]}
        onSanitize={[Function]}
        onValidate={[Function]}
        password={false}
        setRef={[Function]}
        type="text"
        validateOnBlur={true}
        value=""
      >
        <SimpleInput
          autoComplete={false}
          autoCorrect={false}
          className="css-keangt"
          disabled={false}
          id="test-input"
          multiLine={false}
          name="test-input"
          onChange={[Function]}
          onFocusChange={[Function]}
          onSanitize={[Function]}
          onValidate={[Function]}
          password={false}
          setRef={[Function]}
          type="text"
          validateOnBlur={true}
          value=""
        >
          <input
            autoComplete="off"
            autoCorrect="off"
            className="css-keangt"
            disabled={false}
            id="test-input"
            name="test-input"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            type="text"
            value=""
          />
        </SimpleInput>
      </Component>
    </FormElement>
    <Underline
      hasErrorMessage={false}
      isFocused={false}
    >
      <div
        className="css-ycal4l"
      >
        <div
          className="css-1tpmuef"
          style={
            Object {
              "borderBottomColor": undefined,
              "transform": "scale3d(0,1,1)",
            }
          }
        />
      </div>
    </Underline>
    <ErrorText
      className=""
      errorText=""
      validationError={null}
    >
      <div
        className=" css-hmgfge"
      >
        <Translate
          className=""
          params={Object {}}
          string=""
        >
          <span
            className=""
          />
        </Translate>
      </div>
    </ErrorText>
  </div>
</TextField>
`;

exports[`<TextField /> should render the text field as password 1`] = `
<TextField
  className=""
  errorText=""
  hintText=""
  label=""
  multiLine={false}
  name="test-input"
  onChange={[Function]}
  onFocusChange={[Function]}
  onSanitize={[Function]}
  onValidate={[Function]}
  password={true}
  setRef={[Function]}
  type="text"
  value=""
>
  <div
    className="css-1vjh8yv "
  >
    <Hint
      hintText=""
      visible={false}
    >
      <div
        className="css-tnfb18 css-1jyyyen"
      >
        <Translate
          className=""
          params={Object {}}
          string=""
        >
          <span
            className=""
          />
        </Translate>
      </div>
    </Hint>
    <Label
      hasErrorMessage={false}
      isFloating={false}
      isFocused={false}
      label=""
      name="test-input"
    >
      <label
        className="css-u7lqu6 css-1fekhao"
        htmlFor="test-input"
      >
        <Translate
          className=""
          params={Object {}}
          string=""
        >
          <span
            className=""
          />
        </Translate>
      </label>
    </Label>
    <FormElement
      id="test-input"
      multiLine={false}
      name="test-input"
      onChange={[Function]}
      onFocusChange={[Function]}
      onSanitize={[Function]}
      onValidate={[Function]}
      password={true}
      setRef={[Function]}
      type="text"
      value=""
    >
      <Component
        className="css-keangt"
        id="test-input"
        multiLine={false}
        name="test-input"
        onChange={[Function]}
        onFocusChange={[Function]}
        onSanitize={[Function]}
        onValidate={[Function]}
        password={true}
        setRef={[Function]}
        type="text"
        validateOnBlur={true}
        value=""
      >
        <SimpleInput
          autoComplete={false}
          autoCorrect={false}
          className="css-keangt"
          disabled={false}
          id="test-input"
          multiLine={false}
          name="test-input"
          onChange={[Function]}
          onFocusChange={[Function]}
          onSanitize={[Function]}
          onValidate={[Function]}
          password={true}
          setRef={[Function]}
          type="text"
          validateOnBlur={true}
          value=""
        >
          <input
            autoComplete="off"
            autoCorrect="off"
            className="css-keangt"
            disabled={false}
            id="test-input"
            name="test-input"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            type="password"
            value=""
          />
        </SimpleInput>
      </Component>
    </FormElement>
    <Underline
      hasErrorMessage={false}
      isFocused={false}
    >
      <div
        className="css-ycal4l"
      >
        <div
          className="css-1tpmuef"
          style={
            Object {
              "borderBottomColor": undefined,
              "transform": "scale3d(0,1,1)",
            }
          }
        />
      </div>
    </Underline>
    <ErrorText
      className=""
      errorText=""
      validationError={null}
    >
      <div
        className=" css-hmgfge"
      >
        <Translate
          className=""
          params={Object {}}
          string=""
        >
          <span
            className=""
          />
        </Translate>
      </div>
    </ErrorText>
  </div>
</TextField>
`;

exports[`<TextField /> should render the text field with a default value 1`] = `
<TextField
  className=""
  errorText=""
  hintText=""
  label=""
  multiLine={false}
  name="test-input"
  onChange={[Function]}
  onFocusChange={[Function]}
  onSanitize={[Function]}
  onValidate={[Function]}
  password={false}
  setRef={[Function]}
  type="text"
  value="FooBar"
>
  <div
    className="css-1vjh8yv "
  >
    <Hint
      hintText=""
      visible={false}
    >
      <div
        className="css-tnfb18 css-1jyyyen"
      >
        <Translate
          className=""
          params={Object {}}
          string=""
        >
          <span
            className=""
          />
        </Translate>
      </div>
    </Hint>
    <Label
      hasErrorMessage={false}
      isFloating={true}
      isFocused={false}
      label=""
      name="test-input"
    >
      <label
        className="css-u7lqu6 css-16msjt6 css-1fekhao"
        htmlFor="test-input"
      >
        <Translate
          className=""
          params={Object {}}
          string=""
        >
          <span
            className=""
          />
        </Translate>
      </label>
    </Label>
    <FormElement
      id="test-input"
      multiLine={false}
      name="test-input"
      onChange={[Function]}
      onFocusChange={[Function]}
      onSanitize={[Function]}
      onValidate={[Function]}
      password={false}
      setRef={[Function]}
      type="text"
      value="FooBar"
    >
      <Component
        className="css-keangt"
        id="test-input"
        multiLine={false}
        name="test-input"
        onChange={[Function]}
        onFocusChange={[Function]}
        onSanitize={[Function]}
        onValidate={[Function]}
        password={false}
        setRef={[Function]}
        type="text"
        validateOnBlur={true}
        value="FooBar"
      >
        <SimpleInput
          autoComplete={false}
          autoCorrect={false}
          className="css-keangt"
          disabled={false}
          id="test-input"
          multiLine={false}
          name="test-input"
          onChange={[Function]}
          onFocusChange={[Function]}
          onSanitize={[Function]}
          onValidate={[Function]}
          password={false}
          setRef={[Function]}
          type="text"
          validateOnBlur={true}
          value="FooBar"
        >
          <input
            autoComplete="off"
            autoCorrect="off"
            className="css-keangt"
            disabled={false}
            id="test-input"
            name="test-input"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            type="text"
            value="FooBar"
          />
        </SimpleInput>
      </Component>
    </FormElement>
    <Underline
      hasErrorMessage={false}
      isFocused={false}
    >
      <div
        className="css-ycal4l"
      >
        <div
          className="css-1tpmuef"
          style={
            Object {
              "borderBottomColor": undefined,
              "transform": "scale3d(0,1,1)",
            }
          }
        />
      </div>
    </Underline>
    <ErrorText
      className=""
      errorText=""
      validationError={null}
    >
      <div
        className=" css-hmgfge"
      >
        <Translate
          className=""
          params={Object {}}
          string=""
        >
          <span
            className=""
          />
        </Translate>
      </div>
    </ErrorText>
  </div>
</TextField>
`;

exports[`<TextField /> should replace the error text with custom validation error 1`] = `
<TextField
  className=""
  errorText=""
  hintText=""
  label=""
  multiLine={false}
  name="test-input"
  onChange={[Function]}
  onFocusChange={[Function]}
  onSanitize={[Function]}
  onValidate={[Function]}
  password={false}
  setRef={[Function]}
  type="text"
  value=""
>
  <div
    className="css-1vjh8yv "
  >
    <Hint
      hintText=""
      visible={false}
    >
      <div
        className="css-tnfb18 css-1jyyyen"
      >
        <Translate
          className=""
          params={Object {}}
          string=""
        >
          <span
            className=""
          />
        </Translate>
      </div>
    </Hint>
    <Label
      hasErrorMessage={true}
      isFloating={false}
      isFocused={false}
      label=""
      name="test-input"
    >
      <label
        className="css-u7lqu6 css-1fekhao"
        htmlFor="test-input"
      >
        <Translate
          className=""
          params={Object {}}
          string=""
        >
          <span
            className=""
          />
        </Translate>
      </label>
    </Label>
    <FormElement
      id="test-input"
      multiLine={false}
      name="test-input"
      onChange={[Function]}
      onFocusChange={[Function]}
      onSanitize={[Function]}
      onValidate={[Function]}
      password={false}
      setRef={[Function]}
      type="text"
      value=""
    >
      <Component
        className="css-keangt"
        id="test-input"
        multiLine={false}
        name="test-input"
        onChange={[Function]}
        onFocusChange={[Function]}
        onSanitize={[Function]}
        onValidate={[Function]}
        password={false}
        setRef={[Function]}
        type="text"
        validateOnBlur={true}
        value=""
      >
        <SimpleInput
          autoComplete={false}
          autoCorrect={false}
          className="css-keangt"
          disabled={false}
          id="test-input"
          multiLine={false}
          name="test-input"
          onChange={[Function]}
          onFocusChange={[Function]}
          onSanitize={[Function]}
          onValidate={[Function]}
          password={false}
          setRef={[Function]}
          type="text"
          validateOnBlur={true}
          value=""
        >
          <input
            autoComplete="off"
            autoCorrect="off"
            className="css-keangt"
            disabled={false}
            id="test-input"
            name="test-input"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            type="text"
            value=""
          />
        </SimpleInput>
      </Component>
    </FormElement>
    <Underline
      hasErrorMessage={true}
      isFocused={false}
    >
      <div
        className="css-ycal4l"
      >
        <div
          className="css-1tpmuef"
          style={
            Object {
              "borderBottomColor": "#ff0000",
            }
          }
        />
      </div>
    </Underline>
    <ErrorText
      className=""
      errorText=""
      validationError="Custom validation error"
    >
      <div
        className=" css-hmgfge"
      >
        <Translate
          className=""
          params={Object {}}
          string="Custom validation error"
        >
          <span
            className=""
          >
            Custom validation error
          </span>
        </Translate>
      </div>
    </ErrorText>
  </div>
</TextField>
`;

exports[`<TextField /> should sanitize the input 1`] = `
<TextField
  className=""
  errorText=""
  hintText=""
  label=""
  multiLine={false}
  name="test-input"
  onChange={[Function]}
  onFocusChange={[Function]}
  onSanitize={[Function]}
  onValidate={[Function]}
  password={false}
  setRef={[Function]}
  type="text"
  value=""
>
  <div
    className="css-1vjh8yv "
  >
    <Hint
      hintText=""
      visible={false}
    >
      <div
        className="css-tnfb18 css-1jyyyen"
      >
        <Translate
          className=""
          params={Object {}}
          string=""
        >
          <span
            className=""
          />
        </Translate>
      </div>
    </Hint>
    <Label
      hasErrorMessage={false}
      isFloating={false}
      isFocused={false}
      label=""
      name="test-input"
    >
      <label
        className="css-u7lqu6 css-1fekhao"
        htmlFor="test-input"
      >
        <Translate
          className=""
          params={Object {}}
          string=""
        >
          <span
            className=""
          />
        </Translate>
      </label>
    </Label>
    <FormElement
      id="test-input"
      multiLine={false}
      name="test-input"
      onChange={[Function]}
      onFocusChange={[Function]}
      onSanitize={[Function]}
      onValidate={[Function]}
      password={false}
      setRef={[Function]}
      type="text"
      value=""
    >
      <Component
        className="css-keangt"
        id="test-input"
        multiLine={false}
        name="test-input"
        onChange={[Function]}
        onFocusChange={[Function]}
        onSanitize={[Function]}
        onValidate={[Function]}
        password={false}
        setRef={[Function]}
        type="text"
        validateOnBlur={true}
        value=""
      >
        <SimpleInput
          autoComplete={false}
          autoCorrect={false}
          className="css-keangt"
          disabled={false}
          id="test-input"
          multiLine={false}
          name="test-input"
          onChange={[Function]}
          onFocusChange={[Function]}
          onSanitize={[Function]}
          onValidate={[Function]}
          password={false}
          setRef={[Function]}
          type="text"
          validateOnBlur={true}
          value=""
        >
          <input
            autoComplete="off"
            autoCorrect="off"
            className="css-keangt"
            disabled={false}
            id="test-input"
            name="test-input"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            type="text"
            value="FOOBAR"
          />
        </SimpleInput>
      </Component>
    </FormElement>
    <Underline
      hasErrorMessage={false}
      isFocused={false}
    >
      <div
        className="css-ycal4l"
      >
        <div
          className="css-1tpmuef"
          style={
            Object {
              "borderBottomColor": undefined,
              "transform": "scale3d(0,1,1)",
            }
          }
        />
      </div>
    </Underline>
    <ErrorText
      className=""
      errorText=""
      validationError={null}
    >
      <div
        className=" css-hmgfge"
      >
        <Translate
          className=""
          params={Object {}}
          string=""
        >
          <span
            className=""
          />
        </Translate>
      </div>
    </ErrorText>
  </div>
</TextField>
`;

exports[`<TextField /> should show the error message 1`] = `
<TextField
  className=""
  errorText="This is an error here"
  hintText=""
  label=""
  multiLine={false}
  name="test-input"
  onChange={[Function]}
  onFocusChange={[Function]}
  onSanitize={[Function]}
  onValidate={[Function]}
  password={false}
  setRef={[Function]}
  type="text"
  value=""
>
  <div
    className="css-1vjh8yv "
  >
    <Hint
      hintText=""
      visible={false}
    >
      <div
        className="css-tnfb18 css-1jyyyen"
      >
        <Translate
          className=""
          params={Object {}}
          string=""
        >
          <span
            className=""
          />
        </Translate>
      </div>
    </Hint>
    <Label
      hasErrorMessage={true}
      isFloating={false}
      isFocused={false}
      label=""
      name="test-input"
    >
      <label
        className="css-u7lqu6 css-1fekhao"
        htmlFor="test-input"
      >
        <Translate
          className=""
          params={Object {}}
          string=""
        >
          <span
            className=""
          />
        </Translate>
      </label>
    </Label>
    <FormElement
      id="test-input"
      multiLine={false}
      name="test-input"
      onChange={[Function]}
      onFocusChange={[Function]}
      onSanitize={[Function]}
      onValidate={[Function]}
      password={false}
      setRef={[Function]}
      type="text"
      value=""
    >
      <Component
        className="css-keangt"
        id="test-input"
        multiLine={false}
        name="test-input"
        onChange={[Function]}
        onFocusChange={[Function]}
        onSanitize={[Function]}
        onValidate={[Function]}
        password={false}
        setRef={[Function]}
        type="text"
        validateOnBlur={true}
        value=""
      >
        <SimpleInput
          autoComplete={false}
          autoCorrect={false}
          className="css-keangt"
          disabled={false}
          id="test-input"
          multiLine={false}
          name="test-input"
          onChange={[Function]}
          onFocusChange={[Function]}
          onSanitize={[Function]}
          onValidate={[Function]}
          password={false}
          setRef={[Function]}
          type="text"
          validateOnBlur={true}
          value=""
        >
          <input
            autoComplete="off"
            autoCorrect="off"
            className="css-keangt"
            disabled={false}
            id="test-input"
            name="test-input"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            type="text"
            value=""
          />
        </SimpleInput>
      </Component>
    </FormElement>
    <Underline
      hasErrorMessage={true}
      isFocused={false}
    >
      <div
        className="css-ycal4l"
      >
        <div
          className="css-1tpmuef"
          style={
            Object {
              "borderBottomColor": "#ff0000",
            }
          }
        />
      </div>
    </Underline>
    <ErrorText
      className=""
      errorText="This is an error here"
      validationError={null}
    >
      <div
        className=" css-hmgfge"
      >
        <Translate
          className=""
          params={Object {}}
          string="This is an error here"
        >
          <span
            className=""
          >
            This is an error here
          </span>
        </Translate>
      </div>
    </ErrorText>
  </div>
</TextField>
`;

exports[`<TextField /> should show the hint text 1`] = `
<TextField
  className=""
  errorText=""
  hintText="This is the hint text"
  label=""
  multiLine={false}
  name="test-input"
  onChange={[Function]}
  onFocusChange={[Function]}
  onSanitize={[Function]}
  onValidate={[Function]}
  password={false}
  setRef={[Function]}
  type="text"
  value=""
>
  <div
    className="css-1vjh8yv "
  >
    <Hint
      hintText="This is the hint text"
      visible={false}
    >
      <div
        className="css-tnfb18 css-1jyyyen"
      >
        <Translate
          className=""
          params={Object {}}
          string="This is the hint text"
        >
          <span
            className=""
          >
            This is the hint text
          </span>
        </Translate>
      </div>
    </Hint>
    <Label
      hasErrorMessage={false}
      isFloating={false}
      isFocused={false}
      label=""
      name="test-input"
    >
      <label
        className="css-u7lqu6 css-1fekhao"
        htmlFor="test-input"
      >
        <Translate
          className=""
          params={Object {}}
          string=""
        >
          <span
            className=""
          />
        </Translate>
      </label>
    </Label>
    <FormElement
      id="test-input"
      multiLine={false}
      name="test-input"
      onChange={[Function]}
      onFocusChange={[Function]}
      onSanitize={[Function]}
      onValidate={[Function]}
      password={false}
      setRef={[Function]}
      type="text"
      value=""
    >
      <Component
        className="css-keangt"
        id="test-input"
        multiLine={false}
        name="test-input"
        onChange={[Function]}
        onFocusChange={[Function]}
        onSanitize={[Function]}
        onValidate={[Function]}
        password={false}
        setRef={[Function]}
        type="text"
        validateOnBlur={true}
        value=""
      >
        <SimpleInput
          autoComplete={false}
          autoCorrect={false}
          className="css-keangt"
          disabled={false}
          id="test-input"
          multiLine={false}
          name="test-input"
          onChange={[Function]}
          onFocusChange={[Function]}
          onSanitize={[Function]}
          onValidate={[Function]}
          password={false}
          setRef={[Function]}
          type="text"
          validateOnBlur={true}
          value=""
        >
          <input
            autoComplete="off"
            autoCorrect="off"
            className="css-keangt"
            disabled={false}
            id="test-input"
            name="test-input"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            type="text"
            value=""
          />
        </SimpleInput>
      </Component>
    </FormElement>
    <Underline
      hasErrorMessage={false}
      isFocused={false}
    >
      <div
        className="css-ycal4l"
      >
        <div
          className="css-1tpmuef"
          style={
            Object {
              "borderBottomColor": undefined,
              "transform": "scale3d(0,1,1)",
            }
          }
        />
      </div>
    </Underline>
    <ErrorText
      className=""
      errorText=""
      validationError={null}
    >
      <div
        className=" css-hmgfge"
      >
        <Translate
          className=""
          params={Object {}}
          string=""
        >
          <span
            className=""
          />
        </Translate>
      </div>
    </ErrorText>
  </div>
</TextField>
`;

exports[`<TextField /> should show the label 1`] = `
<TextField
  className=""
  errorText=""
  hintText=""
  label="This is the label"
  multiLine={false}
  name="test-input"
  onChange={[Function]}
  onFocusChange={[Function]}
  onSanitize={[Function]}
  onValidate={[Function]}
  password={false}
  setRef={[Function]}
  type="text"
  value=""
>
  <div
    className="css-1vjh8yv "
  >
    <Hint
      hintText=""
      visible={false}
    >
      <div
        className="css-tnfb18 css-1jyyyen"
      >
        <Translate
          className=""
          params={Object {}}
          string=""
        >
          <span
            className=""
          />
        </Translate>
      </div>
    </Hint>
    <Label
      hasErrorMessage={false}
      isFloating={false}
      isFocused={false}
      label="This is the label"
      name="test-input"
    >
      <label
        className="css-u7lqu6 css-1fekhao"
        htmlFor="test-input"
      >
        <Translate
          className=""
          params={Object {}}
          string="This is the label"
        >
          <span
            className=""
          >
            This is the label
          </span>
        </Translate>
      </label>
    </Label>
    <FormElement
      id="test-input"
      multiLine={false}
      name="test-input"
      onChange={[Function]}
      onFocusChange={[Function]}
      onSanitize={[Function]}
      onValidate={[Function]}
      password={false}
      setRef={[Function]}
      type="text"
      value=""
    >
      <Component
        className="css-keangt"
        id="test-input"
        multiLine={false}
        name="test-input"
        onChange={[Function]}
        onFocusChange={[Function]}
        onSanitize={[Function]}
        onValidate={[Function]}
        password={false}
        setRef={[Function]}
        type="text"
        validateOnBlur={true}
        value=""
      >
        <SimpleInput
          autoComplete={false}
          autoCorrect={false}
          className="css-keangt"
          disabled={false}
          id="test-input"
          multiLine={false}
          name="test-input"
          onChange={[Function]}
          onFocusChange={[Function]}
          onSanitize={[Function]}
          onValidate={[Function]}
          password={false}
          setRef={[Function]}
          type="text"
          validateOnBlur={true}
          value=""
        >
          <input
            autoComplete="off"
            autoCorrect="off"
            className="css-keangt"
            disabled={false}
            id="test-input"
            name="test-input"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            type="text"
            value=""
          />
        </SimpleInput>
      </Component>
    </FormElement>
    <Underline
      hasErrorMessage={false}
      isFocused={false}
    >
      <div
        className="css-ycal4l"
      >
        <div
          className="css-1tpmuef"
          style={
            Object {
              "borderBottomColor": undefined,
              "transform": "scale3d(0,1,1)",
            }
          }
        />
      </div>
    </Underline>
    <ErrorText
      className=""
      errorText=""
      validationError={null}
    >
      <div
        className=" css-hmgfge"
      >
        <Translate
          className=""
          params={Object {}}
          string=""
        >
          <span
            className=""
          />
        </Translate>
      </div>
    </ErrorText>
  </div>
</TextField>
`;

exports[`<TextField /> should trigger the onChange callback 1`] = `
<TextField
  className=""
  errorText=""
  hintText=""
  label=""
  multiLine={false}
  name="test-input"
  onChange={
    [MockFunction] {
      "calls": Array [
        Array [
          "",
        ],
        Array [
          "a",
        ],
      ],
      "results": Array [
        Object {
          "isThrow": false,
          "value": undefined,
        },
        Object {
          "isThrow": false,
          "value": undefined,
        },
      ],
    }
  }
  onFocusChange={[Function]}
  onSanitize={[Function]}
  onValidate={[Function]}
  password={false}
  setRef={[Function]}
  type="text"
  value=""
>
  <div
    className="css-1vjh8yv "
  >
    <Hint
      hintText=""
      visible={false}
    >
      <div
        className="css-tnfb18 css-1jyyyen"
      >
        <Translate
          className=""
          params={Object {}}
          string=""
        >
          <span
            className=""
          />
        </Translate>
      </div>
    </Hint>
    <Label
      hasErrorMessage={false}
      isFloating={false}
      isFocused={false}
      label=""
      name="test-input"
    >
      <label
        className="css-u7lqu6 css-1fekhao"
        htmlFor="test-input"
      >
        <Translate
          className=""
          params={Object {}}
          string=""
        >
          <span
            className=""
          />
        </Translate>
      </label>
    </Label>
    <FormElement
      id="test-input"
      multiLine={false}
      name="test-input"
      onChange={[Function]}
      onFocusChange={[Function]}
      onSanitize={[Function]}
      onValidate={[Function]}
      password={false}
      setRef={[Function]}
      type="text"
      value=""
    >
      <Component
        className="css-keangt"
        id="test-input"
        multiLine={false}
        name="test-input"
        onChange={[Function]}
        onFocusChange={[Function]}
        onSanitize={[Function]}
        onValidate={[Function]}
        password={false}
        setRef={[Function]}
        type="text"
        validateOnBlur={true}
        value=""
      >
        <SimpleInput
          autoComplete={false}
          autoCorrect={false}
          className="css-keangt"
          disabled={false}
          id="test-input"
          multiLine={false}
          name="test-input"
          onChange={[Function]}
          onFocusChange={[Function]}
          onSanitize={[Function]}
          onValidate={[Function]}
          password={false}
          setRef={[Function]}
          type="text"
          validateOnBlur={true}
          value=""
        >
          <input
            autoComplete="off"
            autoCorrect="off"
            className="css-keangt"
            disabled={false}
            id="test-input"
            name="test-input"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            type="text"
            value="a"
          />
        </SimpleInput>
      </Component>
    </FormElement>
    <Underline
      hasErrorMessage={false}
      isFocused={false}
    >
      <div
        className="css-ycal4l"
      >
        <div
          className="css-1tpmuef"
          style={
            Object {
              "borderBottomColor": undefined,
              "transform": "scale3d(0,1,1)",
            }
          }
        />
      </div>
    </Underline>
    <ErrorText
      className=""
      errorText=""
      validationError={null}
    >
      <div
        className=" css-hmgfge"
      >
        <Translate
          className=""
          params={Object {}}
          string=""
        >
          <span
            className=""
          />
        </Translate>
      </div>
    </ErrorText>
  </div>
</TextField>
`;

exports[`<TextField /> should trigger the validation callback 1`] = `
<TextField
  className=""
  errorText=""
  hintText=""
  label=""
  multiLine={false}
  name="test-input"
  onChange={[Function]}
  onFocusChange={[Function]}
  onSanitize={[Function]}
  onValidate={
    [MockFunction] {
      "calls": Array [
        Array [
          "",
        ],
      ],
      "results": Array [
        Object {
          "isThrow": false,
          "value": undefined,
        },
      ],
    }
  }
  password={false}
  setRef={[Function]}
  type="text"
  value=""
>
  <div
    className="css-1vjh8yv "
  >
    <Hint
      hintText=""
      visible={false}
    >
      <div
        className="css-tnfb18 css-1jyyyen"
      >
        <Translate
          className=""
          params={Object {}}
          string=""
        >
          <span
            className=""
          />
        </Translate>
      </div>
    </Hint>
    <Label
      hasErrorMessage={false}
      isFloating={false}
      isFocused={false}
      label=""
      name="test-input"
    >
      <label
        className="css-u7lqu6 css-1fekhao"
        htmlFor="test-input"
      >
        <Translate
          className=""
          params={Object {}}
          string=""
        >
          <span
            className=""
          />
        </Translate>
      </label>
    </Label>
    <FormElement
      id="test-input"
      multiLine={false}
      name="test-input"
      onChange={[Function]}
      onFocusChange={[Function]}
      onSanitize={[Function]}
      onValidate={[Function]}
      password={false}
      setRef={[Function]}
      type="text"
      value=""
    >
      <Component
        className="css-keangt"
        id="test-input"
        multiLine={false}
        name="test-input"
        onChange={[Function]}
        onFocusChange={[Function]}
        onSanitize={[Function]}
        onValidate={[Function]}
        password={false}
        setRef={[Function]}
        type="text"
        validateOnBlur={true}
        value=""
      >
        <SimpleInput
          autoComplete={false}
          autoCorrect={false}
          className="css-keangt"
          disabled={false}
          id="test-input"
          multiLine={false}
          name="test-input"
          onChange={[Function]}
          onFocusChange={[Function]}
          onSanitize={[Function]}
          onValidate={[Function]}
          password={false}
          setRef={[Function]}
          type="text"
          validateOnBlur={true}
          value=""
        >
          <input
            autoComplete="off"
            autoCorrect="off"
            className="css-keangt"
            disabled={false}
            id="test-input"
            name="test-input"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            type="text"
            value=""
          />
        </SimpleInput>
      </Component>
    </FormElement>
    <Underline
      hasErrorMessage={false}
      isFocused={false}
    >
      <div
        className="css-ycal4l"
      >
        <div
          className="css-1tpmuef"
          style={
            Object {
              "borderBottomColor": undefined,
              "transform": "scale3d(0,1,1)",
            }
          }
        />
      </div>
    </Underline>
    <ErrorText
      className=""
      errorText=""
      validationError={null}
    >
      <div
        className=" css-hmgfge"
      >
        <Translate
          className=""
          params={Object {}}
          string=""
        >
          <span
            className=""
          />
        </Translate>
      </div>
    </ErrorText>
  </div>
</TextField>
`;
